Centered GitHub Repo HyperLink

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<body>
 		<h1 style="text-align:center;">Tree reacting to Wind</h1>
 		<p style="text-align:center;">CS 180 Maxwell Jung UCSB 2021</p>
-    <a href="https://github.com/MaxwellJung/CS180-Final">GitHub Repository</a>
+		<p align="center"><a href="https://github.com/MaxwellJung/CS180-Final">GitHub Repository</a></p>
 		<h3>Description</h3>
 		<p>The scene shows a dummy with a leaf blower walking through a forest. The leaves sway at different frequency/magnitude depending on their distance and orientation to the leaf blower. The leaf blower can also shake fruits off the trees.</p>
 		<p><img src="Image_0.png" /></p>
