--- a/graphics/index.html
+++ b/graphics/index.html
@@ -10,10 +10,10 @@
 		<p align="center"><a href="https://github.com/MaxwellJung/CS180-Final">GitHub Repository</a></p>
 		<h3>Description</h3>
 		<p>The scene shows a dummy with a leaf blower walking through a forest. The leaves sway at different frequency/magnitude depending on their distance and orientation to the leaf blower. The leaf blower can also shake fruits off the trees.</p>
-		<p><img src="Image_0.png" /></p>
-		<p><img src="Image_1.png" /></p>
-		<p><img src="Image_2.png" /></p>
-		<p><img src="Image_3.png" /></p>
+		<p><img src="graphics/Image_0.png" /></p>
+		<p><img src="graphics/Image_1.png" /></p>
+		<p><img src="graphics/Image_2.png" /></p>
+		<p><img src="graphics/Image_3.png" /></p>
 
 		<iframe width="1300" height="775" src="https://www.youtube.com/embed/PkNsg3UXEJQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
