changed heading/font size

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title>Maxwell Jung's website links</title>
 	</head>
 	<body>
-		<p align="center"><a href="https://mwjung.me/graphics/">openGL Project</a></p>
-    <p align="center"><a href="https://nextcloud.mwjung.me/">Nextcloud Server</a></p>
+		<h1 align="center"><a href="https://mwjung.me/graphics/">openGL Project</a></h1>
+    		<h1 align="center"><a href="https://nextcloud.mwjung.me/">Nextcloud Server</a></h1>
 	</body>
 </html>
