--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 		<title>Maxwell Jung's website links</title>
 	</head>
 	<body>
-		<h1 align="center"><a href="https://mwjung.me/graphics/">openGL Project</a></h1>
-    		<h1 align="center"><a href="https://nextcloud.mwjung.me/">Nextcloud Server</a></h1>
+		<h1 align="center">Maxwell Jung's website links</h1>
+		<h2 align="center"><a href="https://mwjung.me/graphics/">openGL Project</a></h2>
+    		<h2 align="center"><a href="https://nextcloud.mwjung.me/">Nextcloud Server</a></h2>
 	</body>
 </html>
