change .me to .com

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<h1 align="center">Maxwell Jung's website links</h1>
-		<h2 align="center"><a href="https://mwjung.me/graphics/">openGL Project</a></h2>
-    		<h2 align="center"><a href="https://nextcloud.mwjung.me/">Nextcloud Server</a></h2>
+		<h2 align="center"><a href="https://mwjung.com/graphics/">openGL Project</a></h2>
+    		<h2 align="center"><a href="https://nextcloud.mwjung.com/">Nextcloud Server</a></h2>
 	</body>
 </html>
