--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 		<h1 align="center">Maxwell Jung's website links</h1>
 		<h2 align="center"><a href="https://mwjung.com/graphics/">openGL Project</a></h2>
     		<h2 align="center"><a href="https://nextcloud.mwjung.com/">Nextcloud Server</a></h2>
+		<h2 align="center"><a href="https://github.com/MaxwellJung/">GitHub</a></h2>
 	</body>
 </html>
