--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
 		<h2 align="center"><a href="https://mwjung.com/graphics/">openGL Project</a></h2>
     		<h2 align="center"><a href="https://nextcloud.mwjung.com/">Nextcloud Server</a></h2>
 		<h2 align="center"><a href="https://github.com/MaxwellJung/">GitHub</a></h2>
+		<h2 align="center"><a href="https://www.linkedin.com/in/maxwell-jung/">Linkedin</a></h2>
+		<h2 align="center"><a href="https://nextcloud.mwjung.com/s/i7bnjbCX5aRSZ7A">Resume (as of 9/23/2022)</a></h2>
+		<h2 align="center"><a href="https://nextcloud.mwjung.com/s/8mWWXHpr9xGjf2Q">Transcript (as of 9/22/2022)</a></h2>
 	</body>
 </html>
