--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     		<h2 align="center"><a href="https://nextcloud.mwjung.com/">Nextcloud Server</a></h2>
 		<h2 align="center"><a href="https://github.com/MaxwellJung/">GitHub</a></h2>
 		<h2 align="center"><a href="https://www.linkedin.com/in/maxwell-jung/">Linkedin</a></h2>
-		<h2 align="center"><a href="https://nextcloud.mwjung.com/s/resume">Resume (as of 10/18/2022)</a></h2>
-		<h2 align="center"><a href="https://nextcloud.mwjung.com/s/transcript">Transcript (as of 9/22/2022)</a></h2>
+		<h2 align="center"><a href="https://nextcloud.mwjung.com/s/resume">Resume</a></h2>
+		<h2 align="center"><a href="https://nextcloud.mwjung.com/s/transcript">Transcript</a></h2>
 	</body>
 </html>
