--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
 	</head>
 	<body>
 		<h1 align="center">Maxwell Jung's website links</h1>
-		<h2 align="center"><a href="https://mwjung.com/graphics/">openGL Project</a></h2>
-    		<h2 align="center"><a href="https://nextcloud.mwjung.com/">Nextcloud Server</a></h2>
 		<h2 align="center"><a href="https://github.com/MaxwellJung/">GitHub</a></h2>
 		<h2 align="center"><a href="https://www.linkedin.com/in/maxwell-jung/">Linkedin</a></h2>
 		<h2 align="center"><a href="https://nextcloud.mwjung.com/s/resume">Resume</a></h2>
 		<h2 align="center"><a href="https://nextcloud.mwjung.com/s/transcript">Transcript</a></h2>
+		<h2 align="center"><a href="https://nextcloud.mwjung.com/s/code_archive">Coding Assignments</a></h2>
+		<h2 align="center"><a href="https://mwjung.com/graphics/">3D Graphics Project</a></h2>
+    		<h2 align="center"><a href="https://nextcloud.mwjung.com/">Nextcloud Server</a></h2>
 	</body>
 </html>
