add more project links

--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 		<h2 align="center"><a href="https://www.linkedin.com/in/maxwell-jung/">Linkedin</a></h2>
 		<h2 align="center"><a href="https://nextcloud.mwjung.com/s/resume">Resume</a></h2>
 		<h2 align="center"><a href="https://nextcloud.mwjung.com/s/transcript">Transcript</a></h2>
-		<h2 align="center"><a href="https://nextcloud.mwjung.com/s/code_archive">Coding Assignments</a></h2>
+		<h2 align="center"><a href="https://nextcloud.mwjung.com/s/chromatic-tuner">Chromatic Tuner Reprot</a></h2>
 		<h2 align="center"><a href="https://mwjung.com/graphics/">3D Graphics Project</a></h2>
+		<h2 align="center"><a href="https://github.com/MaxwellJung/deeplearning">Deep Learning Practice (in-progress)</a></h2>
     		<h2 align="center"><a href="https://nextcloud.mwjung.com/">Nextcloud Server</a></h2>
+		<h2 align="center"><a href="https://nextcloud.mwjung.com/s/code_archive">Coding Archive</a></h2>
 	</body>
 </html>
