update title and add progress update link

--- a/digital_camera/index.html
+++ b/digital_camera/index.html
@@ -3,16 +3,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>CatPhotoApp</title>
+    <title>ECE153B Final</title>
   </head>
   <body>
     <main>
-      <h1>CatPhotoApp</h1>
+      <h1>ECE153B Final: <br><a target="_blank" href="https://github.com/UCSB-Maxwell-Jung/ECE153B">Digital Camera</a></h1>
       <section>
-        <h2>Cat Photos</h2>
-        <!-- TODO: Add link to cat photos -->
-        <p>See more <a target="_blank" href="https://freecatphotoapp.com">cat photos</a> in our gallery.</p>
-        <a href="https://freecatphotoapp.com"><img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="A cute orange cat lying on its back."></a>
+        <h2>Progress Update</h2>
+        <p>See <a target="_blank" href="https://github.com/UCSB-Maxwell-Jung/ECE153B/pulls?q=is%3Apr+is%3Aclosed+label%3Afinal">
+          Pull Requests</a> for a history of major updates</p>
       </section>
       <section>
         <h2>Cat Lists</h2>
