rephrase progress update

--- a/potato_cam/index.html
+++ b/potato_cam/index.html
@@ -22,14 +22,14 @@
             <i class="fas fa-2x white">UCSB ECE153B Final Project</i><br>
             <i class="fas fa-2x white">Digital Camera</i><p> <br>Maxwell Jung and Baron Young</p>
             <video width="320*1.5" height="240" controls>
-                <source src="/MaxwellJung.github.io/potato_camera/Media/test_walkthrough_video.mp4" type="video/mp4">
+                <source src="Media/test_walkthrough_video.mp4" type="video/mp4">
               Your browser does not support the video tag.
               </video><br>
              <a href="https://github.com/UCSB-Maxwell-Jung/ECE153B"><i class="fab fa-github"></i></a>
 
         </div><br>
-        <p class="p1">Take a look at our git hub above or track the progress <a style="color: #ffffff" href="https://github.com/UCSB-Maxwell-Jung/ECE153B/pulls?q=is%3Apr+label%3Afinal">here</a>.</p>
-        <img src="/MaxwellJung.github.io/potato_camera/Media/potato_IMG_top.jpg" height="450"><br>
+        <p class="p1">See <a style="color: #ffffff" href="https://github.com/UCSB-Maxwell-Jung/ECE153B/pulls?q=is%3Apr+label%3Afinal">pull requests</a> for progress updates</p>
+        <img src="Media/potato_IMG_top.jpg" height="450"><br>
         <div class="section-2">
             <h2>Overview</h2>
             <p> Create a digital camera capable of capturing and saving a photograph. A pre-made
