update product links

--- a/potato_cam/components.html
+++ b/potato_cam/components.html
@@ -17,15 +17,17 @@
         </ul>
         <div class="section-2">
             <h2>Components</h2> 
-            <a style="color: #ffffff" href="https://www.st.com/en/microcontrollers-microprocessors/stm32l476rg.html">STM32L476RG</a> 
+            <a style="color: #ffffff" href="https://www.st.com/en/evaluation-tools/nucleo-l476rg.html">NUCLEO-L476RG</a> 
             <p style="font-size: 20px">The board we used in class was the Nucelo STM32L476RG.</p>
-            <a style="color: #ffffff" href="https://store.arduino.cc/products/arduino-uno-rev3">Arduino</a>
+            <a style="color: #ffffff" href="https://store.arduino.cc/products/arduino-uno-rev3">Arduino Uno</a>
             <p style="font-size: 20px">The ...</p>
-            <a style="color: #ffffff" href="https://www.amazon.com/Arducam-Module-Megapixels-Arduino-Mega2560/dp/B012UXNDOY">Camera</a>
+            <a style="color: #ffffff" href="https://a.co/d/3hNvIkw">Camera</a>
+            <p style="font-size: 20px">Arducam Mini 2MP Plus</p>
+            <a style="color: #ffffff" href="https://a.co/d/8UGdZ2u">SD Card</a>
+            <p style="font-size: 20px">32GB microcenter SD Card</p>
+            <a style="color: #ffffff" href="https://a.co/d/5nJ7ntF">SD Card Reader</a>
             <p style="font-size: 20px">The ...</p>
-            <a style="color: #ffffff" href="https://www.westerndigital.com/products/memory-cards/sandisk-ultra-uhs-i-microsd#SDSQUNC-016G-AN6MA">SD Card</a>
-            <p style="font-size: 20px">The ...</p>
-            <a style="color: #ffffff" href="https://www.adafruit.com/product/1770">LCD</a>
+            <a style="color: #ffffff" href="https://a.co/d/dLTtgci">LCD</a>
             <p style="font-size: 20px">The ...</p>
 
         </div>
