--- a/potato_cam/design.html
+++ b/potato_cam/design.html
@@ -17,13 +17,13 @@
         </ul>
         <div class="section-2">
             <h2>Design</h2>
-            <img src="/MaxwellJung.github.io/potato_cam/Media/block_diagram.png" height="350"><br>
+            <img src="Media/block_diagram.png" height="350"><br>
             <p> Serial Interface Protocols used:</p>
                  ● SPI (camera to Arduino, display, and microSD)
             <br> ● UART (Arduino to STM)
             <br> ● I2C (camera sensor, delegated by Arduino)
             <br><br>
-            <img src="/MaxwellJung.github.io/potato_cam/Media/hardware_setup_photos/IMG_1596.jpg" height="350"><br>
+            <img src="Media/hardware_setup_photos/IMG_1596.jpg" height="350"><br>
             
 
 
@@ -38,12 +38,12 @@
             <br>SDA (green) - SDA
             <br>SCL (white) - SCL
             <br> 
-            <img src="/MaxwellJung.github.io/potato_cam/Media/hardware_setup_photos/IMG_1595.jpg" height="350"><br>
+            <img src="Media/hardware_setup_photos/IMG_1595.jpg" height="350"><br>
             <br>Arduino -> Nucleo (USART)
             <br>TX (green) -> voltage divider -> PB7 (orange)
             <br>RX (blue) -> PB6 (white)
             <br>
-            <img src="/MaxwellJung.github.io/potato_cam/Media/hardware_setup_photos/IMG_1597.jpg" height="350"><br>
+            <img src="Media/hardware_setup_photos/IMG_1597.jpg" height="350"><br>
             <br>SD card -> Nucleo (SPI)
             <br>CS (yellow) - PA15
             <br>SCK (orange) - PC10
@@ -52,7 +52,7 @@
             <br>VCC (red) - 5V
             <br>GND (black) - GND
             <br>
-            <img src="/MaxwellJung.github.io/potato_cam/Media/hardware_setup_photos/IMG_1599.jpg" height="350"><br>
+            <img src="Media/hardware_setup_photos/IMG_1599.jpg" height="350"><br>
             <br>LCD -> Nucleo (SPI)
             <br>VDD (red) - 5V
             <br>GND (black) - GND
