--- a/potato_cam/index.html
+++ b/potato_cam/index.html
@@ -63,8 +63,8 @@
             reading/writing image data using SPI. Apparently, the default SPI timings 
             on STM boards are not recognized by Arducam’s proprietary SPI/I2C IC chip used
             to communicate with the OV2640 sensor. (see
-            <a href="https://github.com/ArduCAM/STM32/issues/2">issue #2</a> and 
-            <a href="https://github.com/ArduCAM/Arduino/issues/127">issue #127</a>.)
+            <a style="display: inline;" href="https://github.com/ArduCAM/STM32/issues/2">issue #2</a> and 
+            <a style="display: inline;" href="https://github.com/ArduCAM/Arduino/issues/127">issue #127</a>.)
             
             The suspected reason for this behavior is the abnormally large timing delay between each data frame sent by STM’s SPI protocol. The suspected solution 
             (though I didn’t have the time to test it) is “data packing” where DMA is used to saturate the internal SPI FIFOs. 
