replace video with youtube embed

--- a/potato_cam/index.html
+++ b/potato_cam/index.html
@@ -22,12 +22,13 @@
         <div class="section-1">
             <i class="fas fa-2x white">UCSB ECE153B Final Project</i><br>
             <i class="fas fa-2x white">Digital Camera - "Potato Cam"</i><p> <br>Maxwell Jung and Baron Young</p>
-            <video width="320*1.5" height="240" controls>
-                <source src="Media/test_walkthrough_video.mp4" type="video/mp4">
-              Your browser does not support the video tag.
-              </video><br>
-             <a href="https://github.com/UCSB-Maxwell-Jung/ECE153B"><i class="fab fa-github"></i></a>
-
+            <iframe width="560" height="315" 
+            src="https://www.youtube.com/embed/kmI8C8piBi4" 
+            title="YouTube video player" frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+            allowfullscreen></iframe>
+            <br>
+            <a href="https://github.com/UCSB-Maxwell-Jung/ECE153B"><i class="fab fa-github"></i></a>
         </div><br>
         <p class="p1"> See <a style="color: #ffffff" 
             href="https://github.com/UCSB-Maxwell-Jung/ECE153B/pulls?q=is%3Apr+label%3Afinal">pull requests</a> for progress updates.</p>
