add more videos

--- a/potato_cam/index.html
+++ b/potato_cam/index.html
@@ -27,6 +27,16 @@
             title="YouTube video player" frameborder="0" 
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
             allowfullscreen></iframe>
+            <iframe width="560" height="315" 
+            src="https://www.youtube.com/embed/jq-AXKJkmDA" 
+            title="YouTube video player" frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+            allowfullscreen></iframe>
+            <iframe width="560" height="315" 
+            src="https://www.youtube.com/embed/R6TvAaTiXlY" title="YouTube video player" 
+            frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+            allowfullscreen></iframe>
             <br>
             <a href="https://github.com/UCSB-Maxwell-Jung/ECE153B"><i class="fab fa-github"></i></a>
         </div><br>
