update lcd test video

--- a/potato_cam/index.html
+++ b/potato_cam/index.html
@@ -23,19 +23,16 @@
             <i class="fas fa-2x white">UCSB ECE153B Final Project</i><br>
             <i class="fas fa-2x white">Digital Camera - "Potato Cam"</i><p> <br>Maxwell Jung and Baron Young</p>
             <iframe width="560" height="315" 
-            src="https://www.youtube.com/embed/kmI8C8piBi4" 
-            title="YouTube video player" frameborder="0" 
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+            src="https://www.youtube.com/embed/kmI8C8piBi4" title="YouTube video player" 
+            frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
             allowfullscreen></iframe>
             <iframe width="560" height="315" 
-            src="https://www.youtube.com/embed/jq-AXKJkmDA" 
-            title="YouTube video player" frameborder="0" 
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+            src="https://www.youtube.com/embed/GylyXvxR7yY" title="YouTube video player" 
+            frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
             allowfullscreen></iframe>
             <iframe width="560" height="315" 
             src="https://www.youtube.com/embed/R6TvAaTiXlY" title="YouTube video player" 
-            frameborder="0" 
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+            frameborder="0"  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
             allowfullscreen></iframe>
             <br>
             <a href="https://github.com/UCSB-Maxwell-Jung/ECE153B"><i class="fab fa-github"></i></a>
